# reev

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCH.md  CICD.md  CURL.md  Cargo.toml  DEV_FLOW.md  DIAGNOSIS_COMPLETE.md  DYNAMIC_BENCHMARK_DESIGN.md  Dockerfile  Dockerfile.cloudflare  Dockerfile.github  FIX.md  FLOW.md  FYI.md  HANDOVER.md  IDEA.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_STATUS.md  ISSUES.md  MIGRATION_SUCCESS.md  NOW.md  OTEL.md  OTEL_DEV.md  OTEL_LOGGING.md  PHASE3_SUMMARY.md  PLAN.md  PLAN_300_SERIES.md  PLAN_API.md  PLAN_CONSOLIDATE.md  PLAN_CORE.md  PLAN_CORE_BENCHMARK.md  PLAN_CORE_V2.md  PLAN_CORE_V3.md  PLAN_DYNAMIC_FLOW.md  PLAN_ERROR_HANDLING.md  PLAN_FLOW.md  (+42 more)
crates/reev-agent/: Cargo.toml  FLOW_VISUALIZATION.md  GLM_TOOL_CALLING.md  HANDOVER.md  README.md  TOOL_LOGGING.md  demo_diagram.html  diagram.mmd  fixed_diagram.mmd  flow_diagram.html  run_glm_demo.sh  working_diagram.html
crates/reev-agent/examples/: 001-sol-transfer.rs  002-spl-transfer.rs  100-jup-swap-sol-usdc.rs  110-jup-lend-deposit-sol.rs  110-jup-lend-sol.rs  111-jup-lend-deposit-usdc.rs  111-jup-lend-usdc.rs  112-jup-lend-withdraw-sol.rs  113-jup-lend-withdraw-usdc.rs  114-jup-positions-and-earnings.rs  114-jup-positions.rs  115-jup-lend-mint-usdc.rs  116-jup-lend-redeem-usdc.rs  200-jup-swap-then-lend-deposit.rs  demo_flow_diagram.md  glm_tool_call_demo.rs  otel_tool_logging_demo.rs  zai_example.rs
crates/reev-agent/src/: agents.rs  lib.rs  main.rs  prompt.rs  run.rs
crates/reev-agent/tests/: context_tests.rs  flow_tracking_test.rs  flow_visualization_mermaid_generator_test.rs  ground_truth_separation_test.rs  otel_logging_test.rs  regular_glm_api_test.rs  zai_agent_model_validation_test.rs
crates/reev-api/: Cargo.toml  Dockerfile.example  README.md  sqlite::memory:-wal
crates/reev-api/src/: handlers.rs  lib.rs  main.rs  services.rs  types.rs
crates/reev-api/tests/: api_mock_test.rs  benchmark_executor_enhanced_otel_test.rs  benchmark_executor_test.rs  concurrency_fix_proof.rs  database_concurrency_negative_demo.rs  database_concurrency_negative_tests.rs  database_concurrency_proof.rs  database_concurrency_tests.rs  database_concurrency_unit_tests.rs  enhanced_otel_057d2e4a-f687-469f-8885-ad57759817c0.jsonl  enhanced_otel_300-swap-test.jsonl  enhanced_otel_93aebfa7-cf08-4793-bc0e-7a8ef4cdddaa.jsonl  execution_logs_test.rs  execution_trace_parser_test.rs  flow_diagram_debug_test.rs  flow_diagram_format_test.rs  glm_routing_test.rs  real_runner_integration_test.rs  session_300_benchmark_test.rs  simple_cli_command_test.rs  simple_concurrency_proof.rs  test_db_clean.rs  test_db_isolation.rs
crates/reev-constants/: Cargo.toml
crates/reev-constants/src/: lib.rs
crates/reev-context/: Cargo.toml  README.md
crates/reev-context/src/: lib.rs
crates/reev-context/tests/: benchmark_context_validation.rs  benchmark_yaml_validation.rs  context_validation_test.rs  lib_tests.rs
crates/reev-core/: Cargo.toml
crates/reev-core/scripts/: run_integration_tests.sh
crates/reev-core/src/: context.rs  executor.rs  lib.rs  planner.rs  validation.rs  yml_schema.rs
crates/reev-core/tests/: README.md  comprehensive_integration.rs  context_tests.rs  e2e_lend.rs  e2e_multi_step.rs  e2e_multi_step_simple.rs  e2e_rig_agent.rs  e2e_swap.rs  e2e_transfer.rs  end_to_end_swap.rs  end_to_end_transfer.rs  enhanced_context_test.rs  execution_test.rs  executor_tests.rs  expected_tools_conversion_test.rs  multi_step_context_test.rs  operation_parsing_fix.rs  planner_module_tests.rs  planner_test.rs  planner_test_utils.rs  planner_tests.rs  refiner_module_tests.rs  rig_agent_e2e_test.rs  rig_agent_integration_test.rs  rig_agent_mod_test.rs  simple_test.rs  single_step_chunks_test.rs  test_llm_integration.rs  test_llm_operation_extraction.rs  test_pubkey_parsing.rs  unified_flow_builder_tests.rs  validation_tests.rs  yml_context_builder_test.rs  yml_schema_tests.rs
crates/reev-db/: Cargo.toml  README.md
crates/reev-db/.schema/: 001_initial_schema.sql  002_add_indexes.sql  003_add_tool_calls_table.sql  README.md  current_schema.sql
crates/reev-db/src/: config.rs  error.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/reev-db/tests/: config_tests.rs  consolidation_test.rs  error_tests.rs  execution_state_test.rs  flow_log_test.rs  lib_tests.rs  pool_mod_test.rs  pooled_writer_test.rs  reader_tests.rs  session_management.rs  shared_benchmark_test.rs  shared_flow_converter_test.rs  shared_flow_types_test.rs  shared_mod_test.rs  shared_performance_test.rs  step6_reproduce_original_issue.rs  tool_call_consolidation_test.rs  types_tests.rs  writer_tests.rs
crates/reev-flow/: Cargo.toml  README.md
crates/reev-flow/src/: database.rs  enhanced_otel.rs  error.rs  lib.rs  logger.rs  otel.rs  renderer.rs  types.rs  utils.rs  website_exporter.rs
crates/reev-flow/tests/: database_test.rs  enhanced_otel_logger_test.rs  enhanced_otel_test.rs  flow_execution_test.rs  jsonl_converter_test.rs  otel_test.rs  renderer_test.rs  simple_enhanced_otel_test.rs  standalone_enhanced_otel_conversion_test.rs  utils_test.rs  website_exporter_test.rs
crates/reev-lib/: Cargo.toml  README.md
crates/reev-lib/src/: agent.rs  balance_validation.rs  benchmark.rs  db.rs  env.rs  flow.rs  instruction_score.rs  lib.rs  llm_agent.rs  metrics.rs  results.rs  score.rs  server_utils.rs  solana_env.rs  test_scenarios.rs  (+1 more)
crates/reev-orchestrator/: Cargo.toml  README.md
crates/reev-protocols/: Cargo.toml  README.md
crates/reev-runner/: Cargo.toml  README.md  build.rs
crates/reev-tools/: Cargo.toml  README.md
crates/reev-tui/: Cargo.toml  README.md
crates/reev-types/: Cargo.toml  README.md
turso-test/: Cargo.toml  README.md  debug_test  debug_test.rs  debug_upsert.rs  inspect_db.rs  minimal_test  minimal_test.rs  turso_proof.txt
turso-test/examples/: debug_test.rs  debug_upsert.rs  inspect_db.rs  minimal_test.rs  step_by_step.rs  turso_upsert_concurrency_test.rs
turso-test/src/: main.rs  simple_test.rs
turso-test/step_by_step/: Cargo.toml
turso-test/tests/: integration_tests.rs
(+630 files in other folders)
