[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reev Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/reev"
description = "A framework for the reproducible evaluation of Solana-native LLM agents."
homepage = "https://github.com/example/reev"
keywords = ["solana", "llm", "agent", "evaluation", "testing"]
categories = ["development-tools", "simulation"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = "1.0.226"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
spl-token = "5.0.2"
