[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reev Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/reev"
description = "A framework for the reproducible evaluation of Solana-native LLM agents."
homepage = "https://github.com/example/reev"
keywords = ["solana", "llm", "agent", "evaluation", "testing"]
categories = ["development-tools", "simulation"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "2.3"
solana-sdk = "2.3"
spl-token = "8.0"
bs58 = "0.5"
regex = "1"
tokio = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
solana-system-transaction = "2.2"
solana-system-interface = "1.0"
tracing = "0.1"
