[workspace]
members = ["crates/reev-lib", "crates/reev-agent", "crates/reev-runner", "crates/reev-tui", "crates/reev-api", "crates/reev-db"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reev Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gist-rs/reev"
description = "A framework for the reproducible evaluation of Solana-native LLM agents."
homepage = "https://github.com/gist-rs/reev"
keywords = ["solana", "llm", "agent", "evaluation", "testing"]
categories = ["development-tools", "simulation"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "2.3"
solana-sdk = "2.3"
spl-token = "8.0"
spl-associated-token-account = "7.0.0"
bs58 = "0.5"
solana-program = "2.3.0"
solana-transaction-status = "2.3.10"
regex = "1"
tokio = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

# Rig dependencies for RAG and multi-step flow orchestration
rig-core = { version = "0.20.0" }
thiserror = "1.0"
solana-system-interface = "1.0"
tracing = "0.1"
rstest = "0.26.1"
tempfile = "3.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
