[package]
name = "turso-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
turso = "0.1.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

[[bin]]
name = "main"
path = "src/main.rs"

# Example binaries
[[bin]]
name = "turso_upsert_concurrency_test"
path = "examples/step_by_step/turso_upsert_concurrency_test.rs"

[[bin]]
name = "step6_reproduce_original_issue"
path = "examples/step_by_step/step6_reproduce_original_issue.rs"

# Step-by-step tutorial examples (commented out - incompatible API with turso 0.1.5)
# [[bin]]
# name = "step1_connection"
# path = "examples/step_by_step/step1_connection.rs"

# [[bin]]
# name = "step2_basic_insert"
# path = "examples/step_by_step/step2_basic_insert.rs"

# [[bin]]
# name = "step3_on_conflict"
# path = "examples/step_by_step/step3_on_conflict.rs"

# [[bin]]
# name = "step4_upsert_benchmark"
# path = "examples/step_by_step/step4_upsert_benchmark.rs"

# [[bin]]
# name = "step5_rapid_calls"
# path = "examples/step_by_step/step5_rapid_calls.rs"

[[bin]]
name = "debug_test"
path = "examples/debug_test.rs"

[[bin]]
name = "debug_upsert"
path = "examples/debug_upsert.rs"

[[bin]]
name = "inspect_db"
path = "examples/inspect_db.rs"

[[bin]]
name = "minimal_test"
path = "examples/minimal_test.rs"
