[package]
name = "turso-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
turso = "0.2.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

[[bin]]
name = "main"
path = "src/main.rs"

# Example binaries
[[bin]]
name = "turso_upsert_concurrency_test"
path = "examples/turso_upsert_concurrency_test.rs"

[[bin]]
name = "reproduce_upsert_issue"
path = "examples/reproduce_upsert_issue.rs"

# Step-by-step tutorial examples (consolidated)
[[bin]]
name = "step_by_step"
path = "examples/step_by_step.rs"

[[bin]]
name = "debug_test"
path = "examples/debug_test.rs"

[[bin]]
name = "debug_upsert"
path = "examples/debug_upsert.rs"

[[bin]]
name = "inspect_db"
path = "examples/inspect_db.rs"

[[bin]]
name = "minimal_test"
path = "examples/minimal_test.rs"
