[package]
name = "reev-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["jupiter", "native"]
jupiter = []
native = []

[dependencies]
axum = "0.8.4"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex = { workspace = true }
solana-sdk = { workspace = true }
bs58 = { workspace = true }
reev-lib = { path = "../reev-lib" }
anyhow = { workspace = true }
solana-system-interface = { workspace = true }
serial_test = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
async-trait = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rig-core = { version = "0.20.0" }
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }
solana-pubkey = "2.0"
hex = "0.4.3"
uuid = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_yaml = { workspace = true }
solana-sdk = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
