[package]
name = "reev-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "reev-agent"

[features]
default = ["jupiter", "native"]
jupiter = []
native = []

[dependencies]
axum = "0.8.4"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex = { workspace = true }
solana-sdk = { workspace = true }
bs58 = { workspace = true }
reev-lib = { path = "../reev-lib" }
reev-tools = { path = "../reev-tools" }
reev-protocols = { path = "../reev-protocols" }
reev-context = { path = "../reev-context" }
reev-flow = { path = "../reev-flow" }
solana-client = { workspace = true }
anyhow = { workspace = true }
serial_test = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rig-core = { version = "0.20.0" }
hex = "0.4.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
bytes = "1.10.1"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_yaml = { workspace = true }
solana-sdk = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
