[package]
name = "reev-api"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "reev-api"
path = "src/main.rs"

[dependencies]
reev-lib = { path = "../reev-lib", features = ["database"] }
reev-db = { path = "../reev-db" }
reev-runner = { path = "../reev-runner" }
reev-flow = { path = "../reev-flow", features = ["database"] }
reev-tools = { path = "../reev-tools" }
reev-types = { path = "../reev-types" }
axum = "0.8.4"
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
project-root = "0.2"
serde_yaml = { workspace = true }
regex = "1.10"
text_trees = "0.1.2"
