[package]
name = "reev-api"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "reev-api"
path = "src/main.rs"

[features]
default = ["cli_runner"]
cli_runner = []
direct_runner = []

[dependencies]
reev-lib = { path = "../reev-lib", features = ["database"] }
reev-db = { path = "../reev-db" }
reev-runner = { path = "../reev-runner", optional = true }
reev-flow = { path = "../reev-flow", features = ["database"], optional = true }
reev-tools = { path = "../reev-tools", optional = true }
reev-types = { path = "../reev-types" }
axum = "0.8.4"
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
project-root = "0.2"
serde_yaml = { workspace = true }
regex = "1.10"
