[package]
name = "reev-api"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.1.1"

[lib]
name = "reev_api"
path = "src/lib.rs"




[[bin]]
name = "reev-api"
path = "src/main.rs"

[features]
default = ["cli_runner"]
cli_runner = []
direct_runner = []

[dependencies]
reev-lib = { path = "../reev-lib", features = ["database"] }
reev-db = { path = "../reev-db" }
reev-flow = { path = "../reev-flow" }
reev-orchestrator = { path = "../reev-orchestrator" }
reev-runner = { path = "../reev-runner" }
reev-tools = { path = "../reev-tools" }
reev-agent = { path = "../reev-agent" }

reev-types = { path = "../reev-types" }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
project-root = "0.2"
ascii_tree = "0.1.1"
serde_yaml = { workspace = true }
