[package]
name = "reev-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core architecture for verifiable AI-generated DeFi flows"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true

# UUID v7 for time-sortable IDs - using workspace uuid with v7 feature

# Local dependencies
reev-types = { path = "../reev-types" }
reev-agent = { path = "../reev-agent" }
reev-tools = { path = "../reev-tools" }
reev-flow = { path = "../reev-flow" }
reev-lib = { path = "../reev-lib" }

# Additional dependencies for Solana key handling
solana-sdk = { workspace = true }
bs58 = "0.5"
ed25519-dalek = "2.0"

# Additional required dependencies
solana-client.workspace = true
regex.workspace = true
reqwest.workspace = true
dotenvy.workspace = true

# Async support
async-trait.workspace = true

# Tool execution support - Using existing tool frameworks instead
rig-core.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tokio-test = "0.4"
serial_test = { workspace = true }
tempfile = "3.8"

# Additional dev dependencies
reev-tools = { path = "../reev-tools" }
reev-protocols = { path = "../reev-protocols" }

# Additional dependencies for end-to-end test
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }
spl-associated-token-account = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
benchmark = []
production = []
