[package]
name = "reev-flow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared flow types and utilities for reev ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Add new dependencies for migrated modules
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ascii_tree = "0.1.1"
async-trait = { workspace = true }

[features]
default = ["database"]
database = []
