[package]
name = "reev-flow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared flow types and utilities for reev ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Add new dependencies for migrated modules
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ascii_tree = "0.1.1"
async-trait = { workspace = true }

# OpenTelemetry dependencies for proper tool call tracing
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.30" }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = ["database"]
database = []

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
