[package]
name = "reev-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bs58 = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
thiserror = { workspace = true }

# OpenTelemetry dependencies for flow tracing
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Solana Dependencies
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }
solana-system-interface = { workspace = true }
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }
