[package]
name = "reev-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamic flow orchestration for reev agents"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true

# Local dependencies
reev-types = { path = "../reev-types" }
reev-tools = { path = "../reev-tools" }
reev-protocols = { path = "../reev-protocols" }
reev-agent = { path = "../reev-agent" }
reev-flow = { path = "../reev-flow" }
reev-lib = { path = "../reev-lib" }

# Solana dependencies
solana-client = { workspace = true }
solana-sdk = { workspace = true }

# Template engine
handlebars = "4.5"

# Async trait support
async-trait = "0.1"

# Futures for async closures
futures = "0.3"

# Caching
lru = "0.12"

# File handling
tempfile.workspace = true

# YML handling
serde_yaml.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["dynamic_flows", "benchmark", "production"]
dynamic_flows = []
benchmark = []
production = []
