[package]
name = "reev-protocols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["jupiter", "native"]
jupiter = []
native = []

[lib]
name = "reev_protocols"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-sdk = { workspace = true }
bs58 = { workspace = true }
reev-lib = { path = "../reev-lib" }
anyhow = { workspace = true }
solana-system-interface = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
async-trait = { workspace = true }
solana-client = { workspace = true }
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }


[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
solana-sdk = { workspace = true }
