[package]
name = "reev-runner"
version = "0.1.0"
edition = "2024"

[lib]
name = "reev_runner"
path = "src/lib.rs"

[[bin]]
name = "reev-runner"
path = "src/main.rs"

[dependencies]
reev-lib = { path = "../reev-lib" }
reev-agent = { path = "../reev-agent" }
anyhow = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
turso = "0.1.5"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
project-root = "0.2.2"

# Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry-appender-tracing = "0.30.1"
chrono = "0.4.42"
ascii_tree = "0.1.1"
solana-sdk = { workspace = true }
bs58 = "0.5.1"

[dev-dependencies]
spl-token = { workspace = true }
solana-system-interface = { workspace = true }
rstest = { workspace = true }
rstest_macros = { workspace = true }
project-root = "0.2.2"
glob = "0.3.1"
