[package]
name = "reev-runner"
version = "0.1.0"
edition = "2024"

[lib]
name = "reev_runner"
path = "src/lib.rs"

[[bin]]
name = "reev-runner"
path = "src/main.rs"

[[test]]
name = "benchmarks_test"
path = "tests/benchmarks_test.rs"

[[test]]
name = "scoring_test"
path = "tests/scoring_test.rs"

[[test]]
name = "surfpool_rpc_test"
path = "tests/surfpool_rpc_test.rs"

[dependencies]
reev-lib = { path = "../reev-lib" }
anyhow = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
turso = "0.1.5"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
project-root = "0.2.2"
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
chrono = "0.4.42"
ascii_tree = "0.1.1"
solana-sdk = { workspace = true }

[dev-dependencies]
spl-token = { workspace = true }
solana-system-interface = { workspace = true }
rstest = { workspace = true }
project-root = "0.2.2"
glob = "0.3.1"
spl-associated-token-account = "4.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
solana-client = { workspace = true }
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
