[package]
name = "reev-runner"
version = "0.1.0"
edition = "2024"

[lib]
name = "reev_runner"
path = "src/lib.rs"

[[bin]]
name = "reev-runner"
path = "src/main.rs"

[[test]]
name = "benchmarks_test"
path = "tests/benchmarks_test.rs"

[[test]]
name = "scoring_test"
path = "tests/scoring_test.rs"

[[test]]
name = "surfpool_rpc_test"
path = "tests/surfpool_rpc_test.rs"



[[test]]
name = "deterministic_agent_test"
path = "tests/deterministic_agent_test.rs"

[[test]]
name = "llm_agent_test"
path = "tests/llm_agent_test.rs"

[[test]]
name = "agent_restart_test"
path = "tests/agent_restart_test.rs"

[dependencies]
 reev-lib = { path = "../reev-lib" }
 reev-flow = { path = "../reev-flow" }
 anyhow = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
project-root = "0.2.2"
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
chrono = "0.4.42"
ascii_tree = "0.1.1"
solana-sdk = { workspace = true }
uuid = { workspace = true }

# Database dependencies
reev-db = { path = "../reev-db" }

# Dependency management
flate2 = "1.0"
tar = "0.4"
zip = "2.0"
sha2 = "0.10"
thiserror = "1.0"
tempfile = { workspace = true }
libc = "0.2.176"

[dev-dependencies]
spl-token = { workspace = true }
solana-system-interface = { workspace = true }
rstest = { workspace = true }
project-root = "0.2.2"
glob = "0.3.1"
spl-associated-token-account = "4.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
solana-client = { workspace = true }
jup-sdk = { path = "../../protocols/jupiter/jup-sdk" }
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
