[package]
name = "reev-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "reev_tools"
path = "src/lib.rs"

[features]
default = ["jupiter", "native"]
jupiter = []
native = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-sdk = { workspace = true }
reev-lib = { path = "../reev-lib" }
reev-protocols = { path = "../reev-protocols" }

anyhow = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rig-core = { workspace = true }
reev-flow = { path = "../reev-flow" }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
solana-client = { workspace = true }
uuid = { workspace = true }

opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
solana-sdk = { workspace = true }
