[package]
name = "reev-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reev-lib = { path = "../reev-lib" }
anyhow = "1.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.27.0"
solana-system-interface = "2.0.0"
